# compare-prompts

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
compare_prompts/: __init__.py  __main__.py  cli.py  display.py  metrics.py  runner.py
promptdiff/: __init__.py  cli.py  display.py  metrics.py
tests/: __init__.py  test_cli.py  test_metrics.py  test_runner.py
